dhall/tests/type-inference/failure/unit/OperatorListConcatenateRhsNotList.txt
Type error: error: BinOpTypeMismatch
 --> <current file>:1:1
  |
1 | [ True ] # 1
  | ^^^^^^^^^^^^ BinOpTypeMismatch
  |
